--- a/yandex_praktikum_1.ipynb
+++ b/yandex_praktikum_1.ipynb
@@ -4,34 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Привет, меня зовут Артем. Сегодня я проверю твой проект.\n",
-    "\n",
-    "Комментарии будут в <font color='green'>зеленой</font>, <font color='blue'>синей</font> или <font color='red'>красной</font> рамках:\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Если все сделано отлично\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Совет: </b> Если можно немного улучшить\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Ошибка:</b> Если требуются исправления. Работа не может быть принята с красными комментариями.\n",
-    "</div>\n",
-    "\n",
-    "### <font color='orange'>Общее впечатление</font>\n",
-    "* Большое спасибо за проделанную работу! Проект сделан очень хорошо!\n",
-    "* Выводы очень информативны и были бы полезны банку.\n",
-    "* В следующий раз лучше разделять большие ячейки на несколько маленьких и писать комментарии не в самих ячейках, а в markdown. Так намного легче читать ноутбук.\n",
-    "* В работе нет критических замечаний, но обрати внимание на советы, постарайся использовать их в будущих проектах.\n",
-    "* Поздравляю! Ты успешно прошел ревью с первого раза, а это большая редкость! Продолжай в том же духе!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Исследование надёжности заёмщиков\n",
     "\n",
     "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
@@ -48,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -214,14 +186,14 @@
        "4             сыграть свадьбу  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('/datasets/data.csv')\n",
+    "data = pd.read_csv('https://code.s3.yandex.net/datasets/data.csv')\n",
     "data.info()\n",
     "data.head()"
    ]
@@ -245,15 +217,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Первичный анализ данных сделан очень хорошо! Стоит еще посмотреть на <span style=\"font-family: monospace\"> .describe() </span>, возможно удастся заметить некоторые артефакты в данных.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Шаг 2. Предобработка данных"
    ]
   },
@@ -266,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -274,9 +237,9 @@
      "output_type": "stream",
      "text": [
       "Пропуски допущены в одних и тех же строках\n",
-      "Отношение среднего к медиане для стажа:  30.495899052668786\n",
-      "Отношение среднего к медиане для дохода:  1.1544937478551978\n",
-      "Медиана стажа: 2194.220566878695 | Среднее стажа: 66914.72890682236\n"
+      "Отношение среднего к медиане для стажа:  30.495899052668598\n",
+      "Отношение среднего к медиане для дохода:  1.1544937478551904\n",
+      "Медиана стажа: 2194.220566878695 | Среднее стажа: 66914.72890682195\n"
      ]
     }
    ],
@@ -308,15 +271,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Совет: </b> Можно было сделать так: <span style=\"font-family: monospace\"> .apply(abs) </span>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Вывод"
    ]
   },
@@ -331,22 +285,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Молодец, что сделал проверку того, что пропуски в одних и тех же строках! Мало кто обращает на это внимание! Предположение по поводу не официального трудоустройства очень интересное и похоже на правду.\n",
-    "    <br> Выбор медианы и среднего аргументирован и абсолютно логичен!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Замена типа данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +303,7 @@
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   children          21525 non-null  int64  \n",
-      " 1   days_employed     21525 non-null  int64  \n",
+      " 1   days_employed     21525 non-null  int32  \n",
       " 2   dob_years         21525 non-null  int64  \n",
       " 3   education         21525 non-null  object \n",
       " 4   education_id      21525 non-null  int64  \n",
@@ -370,8 +314,8 @@
       " 9   debt              21525 non-null  int64  \n",
       " 10  total_income      21525 non-null  float64\n",
       " 11  purpose           21525 non-null  object \n",
-      "dtypes: float64(1), int64(6), object(5)\n",
-      "memory usage: 2.0+ MB\n"
+      "dtypes: float64(1), int32(1), int64(5), object(5)\n",
+      "memory usage: 1.9+ MB\n"
      ]
     }
    ],
@@ -398,21 +342,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Согласен, что не целое количество дней не имеет смысла.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Обработка дубликатов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -471,15 +406,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Восхитительно!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Лемматизация"
    ]
   },
@@ -526,7 +452,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>8437</td>\n",
        "      <td>42</td>\n",
@@ -539,10 +465,10 @@
        "      <td>0</td>\n",
        "      <td>253875.639453</td>\n",
        "      <td>покупка жилья</td>\n",
-       "      <td>жилье</td>\n",
+       "      <td>жил</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>4024</td>\n",
        "      <td>36</td>\n",
@@ -555,10 +481,10 @@
        "      <td>0</td>\n",
        "      <td>112080.014102</td>\n",
        "      <td>приобретение автомобиля</td>\n",
-       "      <td>автомобиль</td>\n",
+       "      <td>автомобил</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>5623</td>\n",
        "      <td>33</td>\n",
@@ -571,10 +497,10 @@
        "      <td>0</td>\n",
        "      <td>145885.952297</td>\n",
        "      <td>покупка жилья</td>\n",
-       "      <td>жилье</td>\n",
+       "      <td>жил</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>4124</td>\n",
        "      <td>32</td>\n",
@@ -587,10 +513,10 @@
        "      <td>0</td>\n",
        "      <td>267628.550329</td>\n",
        "      <td>дополнительное образование</td>\n",
-       "      <td>образование</td>\n",
+       "      <td>образован</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>340266</td>\n",
        "      <td>53</td>\n",
@@ -603,10 +529,10 @@
        "      <td>0</td>\n",
        "      <td>158616.077870</td>\n",
        "      <td>сыграть свадьбу</td>\n",
-       "      <td>свадьба</td>\n",
+       "      <td>свадьб</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>0</td>\n",
        "      <td>926</td>\n",
        "      <td>27</td>\n",
@@ -619,10 +545,10 @@
        "      <td>0</td>\n",
        "      <td>255763.565419</td>\n",
        "      <td>покупка жилья</td>\n",
-       "      <td>жилье</td>\n",
+       "      <td>жил</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>0</td>\n",
        "      <td>2879</td>\n",
        "      <td>43</td>\n",
@@ -635,10 +561,10 @@
        "      <td>0</td>\n",
        "      <td>240525.971920</td>\n",
        "      <td>операции с жильем</td>\n",
-       "      <td>жилье</td>\n",
+       "      <td>жил</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>0</td>\n",
        "      <td>152</td>\n",
        "      <td>50</td>\n",
@@ -651,10 +577,10 @@
        "      <td>0</td>\n",
        "      <td>135823.934197</td>\n",
        "      <td>образование</td>\n",
-       "      <td>образование</td>\n",
+       "      <td>образован</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>2</td>\n",
        "      <td>6929</td>\n",
        "      <td>35</td>\n",
@@ -667,10 +593,10 @@
        "      <td>0</td>\n",
        "      <td>95856.832424</td>\n",
        "      <td>на проведение свадьбы</td>\n",
-       "      <td>свадьба</td>\n",
+       "      <td>свадьб</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>0</td>\n",
        "      <td>2188</td>\n",
        "      <td>41</td>\n",
@@ -683,7 +609,7 @@
        "      <td>0</td>\n",
        "      <td>144425.938277</td>\n",
        "      <td>покупка жилья для семьи</td>\n",
-       "      <td>жилье</td>\n",
+       "      <td>жил</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -714,17 +640,17 @@
        "8  гражданский брак                 1      F   сотрудник     0   95856.832424   \n",
        "9   женат / замужем                 0      M   сотрудник     0  144425.938277   \n",
        "\n",
-       "                      purpose  purpose_tag  \n",
-       "0               покупка жилья        жилье  \n",
-       "1     приобретение автомобиля   автомобиль  \n",
-       "2               покупка жилья        жилье  \n",
-       "3  дополнительное образование  образование  \n",
-       "4             сыграть свадьбу      свадьба  \n",
-       "5               покупка жилья        жилье  \n",
-       "6           операции с жильем        жилье  \n",
-       "7                 образование  образование  \n",
-       "8       на проведение свадьбы      свадьба  \n",
-       "9     покупка жилья для семьи        жилье  "
+       "                      purpose purpose_tag  \n",
+       "0               покупка жилья         жил  \n",
+       "1     приобретение автомобиля   автомобил  \n",
+       "2               покупка жилья         жил  \n",
+       "3  дополнительное образование   образован  \n",
+       "4             сыграть свадьбу      свадьб  \n",
+       "5               покупка жилья         жил  \n",
+       "6           операции с жильем         жил  \n",
+       "7                 образование   образован  \n",
+       "8       на проведение свадьбы      свадьб  \n",
+       "9     покупка жилья для семьи         жил  "
       ]
      },
      "execution_count": 5,
@@ -733,7 +659,7 @@
     }
    ],
    "source": [
-    "import pymystem3 as pm\n",
+    "#import pymystem3 as pm\n",
     "from nltk.stem import SnowballStemmer \n",
     "russian_stemmer = SnowballStemmer('russian')\n",
     "\n",
@@ -747,11 +673,10 @@
     "def define_purpose(purpose):\n",
     "    \n",
     "    #лемматизируем принятую строку\n",
-    "    lem_purpose = sorted(pm.Mystem().lemmatize(purpose), reverse = True)\n",
-    "    \n",
+    "    lem_purpose = list(map(russian_stemmer.stem, purpose.split(' ')))\n",
     "    #соотносим цель со словарем\n",
     "    for word in lem_purpose:\n",
-    "        if russian_stemmer.stem(word) in dict_purpose:\n",
+    "        if word in dict_purpose:\n",
     "            return word\n",
     "    #возвращаем исходную строку если не нашлось совпадений\n",
     "    return purpose\n",
@@ -773,7 +698,7 @@
     "try:\n",
     "    data = data.join(purpose_tag)\n",
     "except:\n",
-    "    pass\n",
+    "   pass\n",
     "\n",
     "data.head(10)"
    ]
@@ -790,19 +715,6 @@
    "metadata": {},
    "source": [
     "С помощью библиотке PyMystem и NLTK обработали цели взятия кредита и получили единообразное описание. Используя новую колонку можно будет категоризировать данные и делать на их основе выводы. Функция работает, к сожалению, долго."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Совет: </b> В целом все сделано хорошо и работает абсолютно корректно. Но отмечу возможные улучшения:\n",
-    "    <br> - Зачем использовать сортировку в функции <span style=\"font-family: monospace\"> define_purpose </span>?\n",
-    "    <br> - Объект <span style=\"font-family: monospace\"> pm.Mystem() </span> можно было инициализировать один раз, а не при каждом вызове функции.\n",
-    "    <br> - Вместо <span style=\"font-family: monospace\"> .apply() </span> можно было использовать <span style=\"font-family: monospace\"> .map() </span>. Подробнее можешь прочитать <a href=\"https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.map.html\"> в документации</a>.\n",
-    "    <br> Часть этих улучшений ускорит (возможно не очень заметно) выполнения ячейки.\n",
-    "</div>"
    ]
   },
   {
@@ -932,21 +844,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Хорошо, что была создана новая колонка, я бы поступил точно также.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "- Есть ли зависимость между семейным положением и возвратом кредита в срок?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -988,15 +891,6 @@
    "metadata": {},
    "source": [
     "Результаты говорят, что те люди которые официально оформляли отношения более дисциплинированы в выплатах, в сравнении с тем кто живет в гражданском браке или без официального оформления отношений. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> Расчеты и выводы абсолютно корректны!\n",
-    "</div>"
    ]
   },
   {
@@ -1080,13 +974,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  debt\n",
-      "purpose_tag           \n",
-      "жилье         6.905830\n",
-      "недвижимость  7.463392\n",
-      "свадьба       8.003442\n",
-      "образование   9.220035\n",
-      "автомобиль    9.359034\n"
+      "                 debt\n",
+      "purpose_tag          \n",
+      "жил          6.977153\n",
+      "недвижим     7.518063\n",
+      "свадьб       8.003442\n",
+      "автомобили   9.205021\n",
+      "образован    9.220035\n",
+      "автомобил    9.378265\n"
      ]
     }
    ],
@@ -1117,15 +1012,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Успех:</b> В целом шаг сделан очень хорошо. Иногда бывает полезно посмотреть на размеры групп. Например, если кредит для свадьбы брали только 10 человек, а на жилье 10000, то делать выводы не очень корректно.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Шаг 4. Общий вывод"
    ]
   },
@@ -1134,43 +1020,6 @@
    "metadata": {},
    "source": [
     "Оказалось, что лучшим заемщиком является вдовец или вдова без детей и с высоким уровнем дохода, собирающийся купить жилье! А худшим не состоящий в официальных отношениях человек с ребенком, со средним уровнем дохода и желающим купить автомобиль!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Чек-лист готовности проекта\n",
-    "\n",
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [x]  открыт файл;\n",
-    "- [x]  файл изучен;\n",
-    "- [x]  определены пропущенные значения;\n",
-    "- [x]  заполнены пропущенные значения;\n",
-    "- [x]  есть пояснение, какие пропущенные значения обнаружены;\n",
-    "- [x]  описаны возможные причины появления пропусков в данных;\n",
-    "- [x]  объяснено, по какому принципу заполнены пропуски;\n",
-    "- [x]  заменен вещественный тип данных на целочисленный;\n",
-    "- [x]  есть пояснение, какой метод используется для изменения типа данных и почему;\n",
-    "- [x]  удалены дубликаты;\n",
-    "- [x]  есть пояснение, какой метод используется для поиска и удаления дубликатов;\n",
-    "- [x]  описаны возможные причины появления дубликатов в данных;\n",
-    "- [x]  выделены леммы в значениях столбца с целями получения кредита;\n",
-    "- [x]  описан процесс лемматизации;\n",
-    "- [x]  данные категоризированы;\n",
-    "- [x]  есть объяснение принципа категоризации данных;\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между наличием детей и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между семейным положением и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Есть ли зависимость между уровнем дохода и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос: \"Как разные цели кредита влияют на его возврат в срок?\";\n",
-    "- [x]  в каждом этапе есть выводы;\n",
-    "- [x]  есть общий вывод."
    ]
   }
  ],
@@ -1190,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
