--- a/5_анализ_авиатрафика.ipynb
+++ b/5_анализ_авиатрафика.ipynb
@@ -41,6 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Так как github не поддерживает отображение динамических графиков potly их можно посмотреть по ссылке: <a href='https://nbviewer.jupyter.org/github/gudvinx/python_coursera/blob/master/5_%D0%B0%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7_%D0%B0%D0%B2%D0%B8%D0%B0%D1%82%D1%80%D0%B0%D1%84%D0%B8%D0%BA%D0%B0.ipynb'>ссылке</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Подготовка данных"
    ]
   },
